[package]
name = "utils"
version = "0.1.0"
authors = ["Janis Böhm <j4nisboehm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
windows = ["winapi"]
default = []

[dependencies]
log = "0.4.14"
winapi = {version = "0.3.9" , features = ["errhandlingapi", "handleapi", "winnt", "processthreadsapi", "memoryapi", "libloaderapi", "minwindef", "ntdef", "winbase", "securitybaseapi", "consoleapi", "wincon", "winuser"], optional = true }

[dependencies.num-traits]
version = "0.2.14"

[dev-dependencies]
simple_logger = {version = "1.11.0", features = ["chrono", "colored"] }
